Add cancel reservation logic